<resources>
    <string name="app_name">Food App</string>
    <string name="back">Back</string>
    <string name="create_new_meal">Create New Meal</string>
    <string name="new_meal">Create New Meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="fusilli_pesto">Fusilli Pesto</string>
    <string name="title">Title</string>
    <string name="recipe">Recipe: Cook 500g fusilli, add pesto and parmesan. Enjoy!</string>
    <string-array name="food_arrays">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Desserts</item>
    </string-array>
</resources>
