<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context="com.example.arsim.foodapp.MainActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_breakfast"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/breakfast"
        android:textSize="15sp"
        android:layout_below="@id/btn_back"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_lunch"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/lunch"
        android:textSize="15sp"
        android:layout_below="@id/btn_breakfast"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_dinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/dinner"
        android:textSize="15sp"
        android:layout_below="@id/btn_lunch"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_snack"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/snack"
        android:textSize="15sp"
        android:layout_below="@id/btn_dinner"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_desserts"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/desserts"
        android:textSize="15sp"
        android:layout_below="@id/btn_snack"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_drinks"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/drinks"
        android:textSize="15sp"
        android:layout_below="@id/btn_desserts"
        android:layout_gravity="center"/>

</RelativeLayout>
