<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_create_new_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_meal"
        android:textSize="15sp"
        android:layout_toRightOf="@id/btn_back"/>

    <Button
        android:id="@+id/btn_fusilli_pesto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/fusilli_pesto"
        android:textSize="15sp"
        android:layout_below="@id/btn_back"
        android:layout_gravity="center"/>


</RelativeLayout>
